<resources>
    <string name="app_name">trashtrivia</string>
    <string name="login_title">Welcome to TrashTrivia</string>
    <string name="login_button_text">Login</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="trash_trivia_header">Trash Trivia</string>
    <string name="header_play_trash_trivia">Play Trash Trivia</string>
    <string name="header_view_profile">View Profile</string>
    <string name="logout_button_text">Logout</string>
    <string name="create_user_account_button_text">Create Account</string>
    <string name="forgot_password_button_text">Forgot Password</string>
    <string name="proceed_as_guest_button_text">Proceed as Guest</string>
    <string name="login_subtitle_text">Fun Sustainability Education</string>
    <string name="create_account_text">Enter a username and password to create an account</string>
    <string name="return_to_login_text">Return to Login</string>
    <string name="account_selection_instructions_text">Select An Account Type</string>
    <string name="account_type_selection_standard_user">Standard User</string>
    <string name="account_type_selection_premium_user">Premium User</string>
    <string name="account_type_selection_admin_user">Admin User</string>
    <string name="security_question_instructions_text">Please select a security question</string>
    <string name="radio_button_security_question_text_1">What is your middle name?</string>
    <string name="radio_button_security_question_text_2">What is your hometown</string>
    <string name="security_question_answer_hint">Security Question Answer</string>
    <string name="request_username">Please enter your username</string>
    <string name="next_text">Next</string>
    <string name="request_security_answer_text">Please enter the answer to the below security question</string>
    <string name="enter_answer_text">Enter Answer</string>
    <string name="submit_answer_text">Submit Answer</string>
    <string name="security_question_result_instructions_text">See your password below:</string>
    <string name="metrics_button">Metrics and Analytics</string>
    <string name="questions_button">Question Management</string>
    <string name="invite_friends_button">Invite Friends</string>
    <string name="notifications_button">News and Notifications</string>
    <string name="question_mgmt_home_text">Question Management Home</string>
    <string name="button_add_question_text">Add Question</string>
    <string name="button_modify_question_text">Modify Question</string>
    <string name="button_delete_question_text">Delete Question</string>
    <string name="return_home_text">Return to Homepage</string>
    <string name="invite_friends_title">Invite Friends</string>
    <string name="invite_friends_instructions">Type the email of the friend you would like to invite.</string>
    <string name="text_edit_invite_friend">Enter friend email.</string>
    <string name="notifications_home">Notifications Home</string>
    <string name="notifications_instructions">Click the notification text to see the notification</string>
    <string name="profile_title">Profile/Leaderboard Page</string>
    <string name="share_profile_title">Share Profile</string>
    <string name="share_profile_instructions">Type the username of the friend who you would like to share your profile</string>
    <string name="share_profile_with_friend">Share Profile</string>
    <string name="metrics_title">Metrics and Analytics</string>
    <string name="metrics_questions_subtitle">Questions Stats</string>
    <string name="metrics_tag_subtitle">Metrics Stats</string>
    <string name="button_complete_quiz">Complete Quiz</string>
</resources>
