<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QuestionMgmtHomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_mgmt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_mgmt_home_text" />

            <Button
                android:id="@+id/button_add_questiona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_add_question_text" />

            <Button
                android:id="@+id/button_modify_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_modify_question_text" />

            <Button
                android:id="@+id/button_delete_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_delete_question_text" />

            <Button
                android:id="@+id/button_return_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_home_text" />
            <Button
                android:id="@+id/button_return_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_to_login_text" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
