<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    tools:context=".ForgotPasswordAskPasswordActivity"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/subtitle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_subtitle_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans"
            tools:text="@string/login_subtitle_text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/request_username_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/request_username"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_text_forgot_username_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/button_submit_security_question_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_text" />

        <Button
            android:id="@+id/button_return_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_to_login_text" />

    </LinearLayout>
</ScrollView>
