<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileShareActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:id="@+id/table_row_invite_friends_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top|center">

            <TextView
                android:id="@+id/textView_share_Profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/share_profile_title"
                android:background="@color/colorAccent"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans"
                tools:text="@string/share_profile_title" />

        </TableRow>

        <TableRow
            android:id="@+id/table_row_invite_friends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top|center">

            <TextView
                android:id="@+id/text_share_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/share_profile_instructions"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans"
                tools:text="@string/invite_friends_instructions" />

        </TableRow>

        <EditText
            android:id="@+id/text_edit_input_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_edit_invite_friend" />

        <TableRow
            android:id="@+id/table_row_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_share_profile_with_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share_profile_with_friend" />

        </TableRow>

        <TableRow
            android:id="@+id/table_row_return_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_return_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/return_home_text" />

        </TableRow>

        <TableRow
            android:id="@+id/table_row_return_to_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_return_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/logout_button_text" />

        </TableRow>
    </TableLayout>

</LinearLayout>