<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        tools:context=".AnswerSecurityQuestionActivity"
        android:layout_height="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/login_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/subtitle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/login_subtitle_text"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="sans"
                tools:text="@string/login_subtitle_text" />

            <EditText
                android:id="@+id/request_security_answer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/request_security_answer_text" />

            <TextView
                android:id="@+id/security_question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <EditText
                android:id="@+id/edit_text_forgot_username_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_answer_text"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/button_submit_security_question_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_answer_text" />

            <Button
                android:id="@+id/button_return_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/return_to_login_text" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
